Fix wrap on stats showcase.

--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -221,7 +221,7 @@
 	}
 	
 	.slide-wrapper {
-		max-width: 1220px;
+		max-width: 1180px;
 		margin: 0 auto;
 		background: white;
 		box-shadow: 0 0 20px rgba( black, .1 );
